testcases/bindgen/33/error_message.txt
error[E0432]: unresolved import `self::super::super::u32`
   --> src/lib.rs:134:17
    |
134 |         pub use self::super::super::u32 as ios_base_openmode;
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `u32` in the root

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
error: Could not compile `octh`.
